trunk/Archive2/56/b6af2c4bf52d8f/output
main.cpp: In function 'int main()':
main.cpp:24:7: error: 'A' is an ambiguous base of 'C'
   c.f();
       ^
